--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".main.widget.SettingActivity">
         </activity>
 
-        <activity android:name=".type.widget.ReadBookActivity">
+        <activity android:name=".study.widget.ReadBookActivity">
         </activity>
 
         <activity android:name=".home.widget.SpeakActivity"
@@ -51,8 +51,13 @@
             android:launchMode="singleTask">
         </activity>
 
-        <activity android:name=".type.widget.VideoViewActivity"
+        <activity android:name=".study.widget.show.VideoViewActivity"
             android:screenOrientation="landscape"
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+
+        <activity android:name=".study.widget.MatingActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
         </activity>
 
