--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
             android:configChanges="orientation|keyboardHidden">
         </activity>
 
+        <activity android:name=".main.widget.SubscribeActivity">
+
+        </activity>
+
         <service android:name="com.example.haoji.phoneticsymbol.component.MusicServices">
         </service>
 
