--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
 
         </activity>
 
+        <activity android:name=".type.widget.ShowDownLoadActivity">
+        </activity>
+
         <service android:name="com.example.haoji.phoneticsymbol.component.MusicServices">
         </service>
 
